Fix the `New Conversation` button overlapping the traffic light controls on macOS (#476)

--- a/browser.css
+++ b/browser.css
@@ -164,6 +164,11 @@ html.sidebar-hidden ._1enh {
 	._4_j5 {
 		display: none !important;
 	}
+	
+	/* Fix the `New Conversation` button overlapping the traffic light controls on macOS */
+	html.os-darwin ._36ic._5l-3 {
+		margin-top: 30px;
+	}
 }
 
 /* Don't show outline on clickable elements except in the delete/mute modal so that we know what we are selecting */
